[gd_scene load_steps=18 format=3 uid="uid://d16sctowh3yjb"]

[ext_resource type="Script" path="res://Enemies/Robot/robot.gd" id="1_7g13w"]
[ext_resource type="Script" path="res://Components/health_component_script.gd" id="1_ctmr0"]
[ext_resource type="Script" path="res://Components/hitbox_component_script.gd" id="2_jeu56"]
[ext_resource type="Script" path="res://Components/movement_component_script.gd" id="3_pabri"]
[ext_resource type="Script" path="res://Components/attack_component_script.gd" id="5_qflpb"]
[ext_resource type="Texture2D" uid="uid://vfss4os08nsb" path="res://Enemies/Robot/Sprites/Walking/Walk_1.png" id="6_57oyn"]
[ext_resource type="Script" path="res://Components/animation_component_script.gd" id="7_4rm50"]
[ext_resource type="Texture2D" uid="uid://daays1ljstupy" path="res://Enemies/Robot/Sprites/Walking/Walk_2.png" id="7_7tn43"]
[ext_resource type="Texture2D" uid="uid://da32eb4lqtsv5" path="res://Enemies/Robot/Sprites/Walking/Walk_3.png" id="8_gl0ke"]
[ext_resource type="Texture2D" uid="uid://c4q7s10drvm4f" path="res://Enemies/Robot/Sprites/Walking/Walk_4.png" id="9_yrcon"]
[ext_resource type="Texture2D" uid="uid://cootn4pddl8tn" path="res://Enemies/Robot/Sprites/Walking/Walk_5.png" id="10_bb1fe"]
[ext_resource type="Texture2D" uid="uid://biow12xmwbnyo" path="res://Enemies/Robot/Sprites/Walking/Walk_6.png" id="11_qh8xg"]
[ext_resource type="Texture2D" uid="uid://ctuo46mowq10c" path="res://Enemies/Robot/Sprites/Hurt/Hurt_1.png" id="12_wu48w"]
[ext_resource type="Texture2D" uid="uid://cvk15lqhce6r5" path="res://Enemies/Robot/Sprites/Hurt/Hurt_2.png" id="13_xm750"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jt281"]
size = Vector2(30, 50)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_u5h0m"]
size = Vector2(30, 50)

[sub_resource type="SpriteFrames" id="SpriteFrames_rgbbr"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("12_wu48w")
}, {
"duration": 1.0,
"texture": ExtResource("13_xm750")
}],
"loop": false,
"name": &"hurt",
"speed": 15.0
}, {
"frames": [],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_57oyn")
}, {
"duration": 1.0,
"texture": ExtResource("7_7tn43")
}, {
"duration": 1.0,
"texture": ExtResource("8_gl0ke")
}, {
"duration": 1.0,
"texture": ExtResource("9_yrcon")
}, {
"duration": 1.0,
"texture": ExtResource("10_bb1fe")
}, {
"duration": 1.0,
"texture": ExtResource("11_qh8xg")
}],
"loop": true,
"name": &"running",
"speed": 6.0
}]

[node name="Robot" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 8
script = ExtResource("1_7g13w")

[node name="HealthComponent" type="Node2D" parent="."]
script = ExtResource("1_ctmr0")
MAX_HEALTH = 100.0

[node name="HitboxComponent" type="Area2D" parent="." node_paths=PackedStringArray("healthComponent", "attackComponent")]
collision_layer = 4
script = ExtResource("2_jeu56")
healthComponent = NodePath("../HealthComponent")
attackComponent = NodePath("../AttackComponent")

[node name="DamagePlayer" type="CollisionShape2D" parent="HitboxComponent"]
shape = SubResource("RectangleShape2D_jt281")

[node name="MovementComponent" type="Node2D" parent="."]
script = ExtResource("3_pabri")

[node name="DamageMe" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_u5h0m")

[node name="AttackComponent" type="Node2D" parent="."]
script = ExtResource("5_qflpb")

[node name="AnimationComponent" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_rgbbr")
animation = &"hurt"
frame_progress = 0.357562
script = ExtResource("7_4rm50")
